Agrego unas cositas mágicas.
Sección de counters, animaciones etc.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <a href="#acerca" data__scroll--spy>Sobre Mí</a>
                 <a href="#campeones" data__scroll--spy>Campeones</a>
                 <a href="#runas" data__scroll--spy>Runas</a>
+                <a href="#counters" data__scroll--spy>Counters</a>
                 <a href="#portafolio" data__scroll--spy>Proyectos</a>
                 <a href="#skins" data__scroll--spy>Skins</a>
                 <a href="#contacto" data__scroll--spy>Contacto</a>
@@ -169,127 +170,6 @@
         <section id="campeones" class="champions section" data__scroll--spy>
             <div class="container full__screen--lg" id="champs__section">
                 <h2 class="section__title">Mis "Mains"</h2>
-
-                <!-- <a href="#runas">
-                    <article class="champion__card" id="Aatrox">
-                        <img src="assets/Aatrox.png" alt="Aatrox">
-                        <h3>Aatrox</h3>
-                        <p>
-                            EL DEMONIO PAPÁ
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Akshan">
-                        <img src="assets/Akshan.png" alt="Akshan">
-                        <h3>Akshan</h3>
-                        <p>
-                            MACUMBERO
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Sylas">
-                        <img src="assets/Sylas.png" alt="Sylas">
-                        <h3>Sylas</h3>
-                        <p>
-                            EL CHAMPION
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Riven">
-                        <img src="assets/Riven.png" alt="Riven">
-                        <h3>Riven</h3>
-                        <p>
-                            LA ROTA
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Kled">
-                        <img src="assets/Kled.png" alt="Kled">
-                        <h3>Kled</h3>
-                        <p>
-                            EL TILTEADO
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Camille">
-                        <img src="assets/Camille.png" alt="Camille">
-                        <h3>Camille</h3>
-                        <p>
-                            LA CYBORG
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Akali">
-                        <img src="assets/Akali.png" alt="Akali">
-                        <h3>Akali</h3>
-                        <p>
-                            LA NINJA
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Fiora">
-                        <img src="assets/Fiora.png" alt="Fiora">
-                        <h3>Fiora</h3>
-                        <p>
-                            LA FRANCESA
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Gwen">
-                        <img src="assets/Gwen.png" alt="Gwen">
-                        <h3>Gwen</h3>
-                        <p>
-                            LA MUÑECA
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Jayce">
-                        <img src="assets/Jayce.png" alt="Jayce">
-                        <h3>Jayce</h3>
-                        <p>
-                            FACHERO SENDOH
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="LeeSin">
-                        <img src="assets/LeeSin.png" alt="Lee Sin">
-                        <h3>Lee Sin</h3>
-                        <p>
-                            EL CIEGO
-                        </p>
-                    </article>
-                </a>
-
-                <a href="#runas">
-                    <article class="champion__card" id="Vladimir">
-                        <img src="assets/Vladimir.png" alt="Vladimir">
-                        <h3>Vladimir</h3>
-                        <p>
-                            EL VÁMPIRO
-                        </p>
-                    </article>
-                </a> -->
-
             </div>
         </section>
 
@@ -843,6 +723,218 @@
             </div>
         </section>
 
+        <!-- Sección de counter e información -->
+        <section id="counters" class="section" data__scroll--spy>
+            <div class="container full__screen--lg">
+                <h2 class="section__title">Counters y Estadísticas</h2>
+                <article class="counters__container">
+                    <div class="counters__header">
+                        <div class="champ__data">
+                            <img src="assets/Aatrox.png" alt="Aatrox">
+                        </div>
+                        <div class="champ__data--name">
+                            <h2>Aatrox</h2>
+                            <div class="stat__data">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                                    <path
+                                        d="M67.84 56.35v5.5c8.62-8.62 14.37 0 14.37 0C112.14 40.78 90.35 2 90.35 2s-.72 17.24-15.08 27.77v16.52c-.24 4.79-3.84 7.9-7.43 10.06M17.79 62.09s4.07-6.46 10.78-2.63L20.91 48.2l6.7-16c-17.24-10.54-18-29.93-18-29.93S-12.14 41 17.79 62.09M26.89 83.89l5.51-18.68-.24-.48L19.23 77.9A17.78 17.78 0 017.5 83.17H3l-1 2.39 12 11.5zM92.27 83.89a16.24 16.24 0 01-11.74-5.27L68.8 66.88l3.83 17.72L85.8 98l12-11.49-1-2.4zM55.87 42.7c0 .24-.24.48-.24.71h.72c5.75.48 7.66 2.64 9.1 7.67a9.35 9.35 0 002.39-1.92c1-1 1.68-1.67 1.68-2.63V28.09a2 2 0 00-1.68-1.92l-31.37-5.74H36a2.39 2.39 0 00-2.39 2.39v6.71l24.9 3.35z">
+                                    </path>
+                                    <path
+                                        d="M60.18 54c-1.2-5.27-1.44-4.55-5.75-4.79L40.78 48v-3.87h5.51A4.09 4.09 0 0050.36 41l1-3.35L32.4 35l-5 12.22 11.74 17-5.54 18.47L49.88 98l16.53-15.07s-6.23-28.5-6.23-29M49.88 2.23l-4.79 10.29 4.79 3.83 4.79-3.83zM62.1 9.41l1.43 6h6l2.87-11zM30.25 15.4h6l.24-.72 1.2-5.27-10.3-5z">
+                                    </path>
+                                </svg>
+                                <p>Fighter</p>
+                            </div>
+                            <input type="number" name="nivel" id="level" value="1"
+                                oninput="this.value=this.value.slice(0,this.maxLength)" maxlength="2" min="1" max="18">
+                        </div>
+                        <div class="stats__container">
+                            <div class="stat__data hp">
+                                <img src="assets/iconos/Health_icon.png" alt="vida">
+                                <p id="hp">580</p>
+                            </div>
+                            <div class="stat__data attack">
+                                <img src="assets/iconos/Attack_damage_icon.png" alt="attack">
+                                <p class="stat__data--attack" id="attack">60</p>
+                            </div>
+                            <div class="stat__data attackS">
+                                <img src="assets/iconos/Attack_speed_icon.png" alt="attackS">
+                                <p id="attackS">0.651</p>
+                            </div>
+                            <div class="stat__data ms">
+                                <img src="assets/iconos/Movement_speed_icon.png" alt="move speed">
+                                <p id="ms">345</p>
+                            </div>
+                            <div class="stat__data armor">
+                                <img src="assets/iconos/Armor_icon.png" alt="armor">
+                                <p id="armor">38</p>
+                            </div>
+                            <div class="stat__data mr">
+                                <img src="assets/iconos/Magic_resistance_icon.png" alt="magic resist">
+                                <p id="mr">32</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="counters__content">
+                        <div class="counters__matchups hard">
+                            <div class="section__header">
+                                Matchups Counter
+                            </div>
+                            <details>
+                                <summary>
+                                    <img src="assets/Irelia.png" alt="Irelia">
+                                    <h3>Irelia</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li><b>BANEARLA</b></li>
+                                        <li>Pedir <b>gankeos</b> porque si sabe jugar es muy complicado.</li>
+                                        <li>Pelearle cuando no tenga <b>stacks</b>.</li>
+                                        <li>Esquivar su <b>E</b> y que cuando usa su <b>Q</b> aparece detrás de
+                                            nosotros.
+                                        </li>
+                                    </ul>
+                                </article>
+                            </details>
+                            <details>
+                                <summary>
+                                    <img src="assets/Fiora.png" alt="Fiora">
+                                    <h3>Fiora</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Guardar la <b>E</b> para el <b>Parry</b></li>
+                                        <li>Pokear con la 1° <b>Q</b></li>
+                                        <li><b>Rushear</b> tabis y corta curas</li>
+                                        <li><b>Freezear</b> en torre ya que es muy</li>
+                                    </ul>
+                                </article>
+                            </details>
+                            <details>
+                                <summary>
+                                    <img src="assets/Mordekaiser.png" alt="Mordekaiser">
+                                    <h3>Mordekaiser</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Tu <b>Q</b> tiene más rango que la de él.</li>
+                                        <li>Pokear antes de hacer <b>all in</b> y estar pendiente del <b>CD</b> de su
+                                            escudo.</li>
+                                        <li>Abusar que es muy gankeable en nivel bajo.</li>
+                                        <li>Hacer <b>trades</b> cortos e ir pokeando con las Q.</li>
+                                    </ul>
+                                </article>
+                            </details>
+                            <details>
+                                <summary>
+                                    <img src="assets/Jayce.png" alt="Jayce">
+                                    <h3>Jayce</h3>
+
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Empezar con <b>escudo</b> y pedir gank <b>early</b> ya que suelen pushear
+                                            mucho.</li>
+                                        <li>Estar atento de cuando cambia a rango que es muy <b>vulnerable</b>.</li>
+                                        <li>En nivel <b>7/8/9</b> hay que empezar a pokearlo con la primera <b>Q</b>.
+                                        </li>
+                                        <li>Rushear <b>tabis</b> o te caga a piñas.</li>
+                                    </ul>
+                                </article>
+                            </details>
+                        </div>
+
+                        <div class="counters__matchups easy">
+                            <div class="section__header">
+                                Matchups Easy
+                            </div>
+                            <details>
+                                <summary>
+                                    <img src="assets/Shen.png" alt="Shen">
+                                    <h3>Shen</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Guardar la E para el Parry</li>
+                                        <li>Pokear con la 1° Q</li>
+                                        <li>Rushear tabis y corta curas</li>
+                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                    </ul>
+                                </article>
+                            </details>
+                            <details>
+                                <summary>
+                                    <img src="assets/Sylas.png" alt="Sylas">
+                                    <h3>Sylas</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Guardar la E para el Parry</li>
+                                        <li>Pokear con la 1° Q</li>
+                                        <li>Rushear tabis y corta curas</li>
+                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                    </ul>
+                                </article>
+                            </details>
+                            <details>
+                                <summary>
+                                    <img src="assets/Vladimir.png" alt="Vladimir">
+                                    <h3>Vladimir</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Guardar la E para el Parry</li>
+                                        <li>Pokear con la 1° Q</li>
+                                        <li>Rushear tabis y corta curas</li>
+                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                    </ul>
+                                </article>
+                            </details>
+                            <details>
+                                <summary>
+                                    <img src="assets/Gnar.png" alt="Gnar">
+                                    <h3>Gnar</h3>
+                                </summary>
+                                <article class="matchups__tips">
+                                    <ul>
+                                        <li>Guardar la E para el Parry</li>
+                                        <li>Pokear con la 1° Q</li>
+                                        <li>Rushear tabis y corta curas</li>
+                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                    </ul>
+                                </article>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="tips__content">
+                        <div class="section__header">
+                            Tips generales
+                        </div>
+                        <article class="tips__list">
+                            <ul>
+                                <li>
+                                    En <b>early</b> no gasten la <b>Q</b> en la wave, sino en pokear al enemigo.
+                                </li>
+                                <li>
+                                    Tratar de cancelar la animación del básico con la <b>E</b>.
+                                </li>
+                                <li>
+                                    Utilizar la <b>E</b> al final de la animación de la <b>Q</b> para poder golpear la
+                                    2° más fácil.
+                                </li>
+                                <li>
+                                    Si no van a pegar la <b>Q</b> dejen que se vaya el cooldown así la tienen más
+                                    rápido.
+                                </li>
+                            </ul>
+                        </article>
+                    </div>
+                </article>
+            </div>
+        </section>
+
         <!-- Sección Portafolio -->
         <section id="portafolio" class="proyect section" data__scroll--spy>
             <div class="container">
@@ -926,7 +1018,6 @@
                 </a>
             </div>
         </section>
-
         <!-- Modals -->
         <article class="modal" id="trabajo-1">
             <div class="modal__content">
@@ -1128,6 +1219,7 @@
         </article>
 
 
+        <!-- Sección Skins -->
         <section id="skins" data__scroll--spy>
             <article class="hero__image" style="--hero-image: url('assets/Akshan_wall.jpg'); --hero-attachment:scroll;">
                 <aside class="hero__image--opacity" style="--hero-opacity-color:var(--white-alpha-color)">
@@ -1147,6 +1239,7 @@
             </article>
         </section>
 
+        <!-- Contacto -->
         <section id="contacto" class="contact section" data__scroll--spy>
             <div class="container">
                 <h2 class="section__title">¿Interesado?</h2>
@@ -1241,8 +1334,8 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <small>Sitio diseñado por <a href="https://www.linkedin.com/in/lucasgim%C3%A9nez1054/" target="_blank"
-                rel="noopener">Lucas Giménez</a></small>
+        <small>Hecho con <div class="heart"></div> por <a href="https://www.linkedin.com/in/lucasgim%C3%A9nez1054/"
+                target="_blank" rel="noopener">Lucas Giménez</a></small>
     </footer>
     <script src="script.js"></script>
 </body>
