--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
                             Soy
                             <b class="hero__image--important">Mirato</b>
                             <br>
-                            y juego <b>Top</b>
-
+                            y te enseño
+                            <br>
+                            a jugar <b>Top</b>
                         </h2>
                     </div>
                 </aside>
@@ -100,7 +101,7 @@
         <!-- Sección Acerca -->
         <section id="acerca" class="about section container full__screen--lg" data__scroll--spy>
             <article>
-                <aside class="text__center">
+                <aside>
                     <h1>Mirato</h1>
                     <h5><b>Challenger S9 S10 S11</b></h5>
                 </aside>
@@ -116,18 +117,23 @@
                     <li><i>Season</i> 10 <b>Challenger</b></li>
                     <li><i>Season</i> 11 <b>Challenger</b></li>
                 </ul>
-                <div class="text__center text__left--lg">
+                <div>
                     <a class="btn" href="assets/CV Gimenez Lucas - Programador.pdf" target="_blank"
                         rel="noopener">DESCARGA MI CV</a>
                 </div>
             </article>
 
             <article>
-                <img class="portrait__image" src="assets/Challenger 2021.png" alt="LucasGiménez">
+                <img src="assets/Emblem_Challenger.png" alt="Challenger" class="chall__icon">
+                <div class="about__data">
+                    <img src="assets/icono.png" class="icono" alt="Icono">
+                    <h2>Mirato</h2>
+                    <img src="assets/Position_Challenger-Top.png" alt="Top">
+                </div>
             </article>
 
             <article>
-                <h2 class="text__center text__left--lg">Mis Habilidades</h2>
+                <h2>Mis Habilidades</h2>
                 <div class="progress">
                     <p>
                         <b>Para <i>Carrear</i></b>
@@ -856,10 +862,10 @@
                                 </summary>
                                 <article class="matchups__tips">
                                     <ul>
-                                        <li>Guardar la E para el Parry</li>
-                                        <li>Pokear con la 1° Q</li>
-                                        <li>Rushear tabis y corta curas</li>
-                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                        <li>Tener cuidado si va con <b>Ignite</b>.</li>
+                                        <li>Si usa su <b>E</b> se come el combo gratis.</li>
+                                        <li>Si está bajo torre pokearlo a puras <b>Q</b> .</li>
+                                        <li>Su <b>E</b> es cancelable ya sea con la <b>Q</b> o la <b>W</b>.</li>
                                     </ul>
                                 </article>
                             </details>
@@ -870,10 +876,10 @@
                                 </summary>
                                 <article class="matchups__tips">
                                     <ul>
-                                        <li>Guardar la E para el Parry</li>
-                                        <li>Pokear con la 1° Q</li>
-                                        <li>Rushear tabis y corta curas</li>
-                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                        <li>Si se acerca a farmear <b>Q</b>, la clave es punishearlo cuando farmea.</li>
+                                        <li>Si esquivas la <b>E</b> queda regalado el pibe.</li>
+                                        <li>Nuestro nivel <b>6</b> es muchísimo mejor que el de él.</li>
+                                        <li>Saquen daño de primera en vez de corta curas ya que tiene poca armor.</li>
                                     </ul>
                                 </article>
                             </details>
@@ -884,10 +890,11 @@
                                 </summary>
                                 <article class="matchups__tips">
                                     <ul>
-                                        <li>Guardar la E para el Parry</li>
-                                        <li>Pokear con la 1° Q</li>
-                                        <li>Rushear tabis y corta curas</li>
-                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                        <li>Tienen que hacer trades largos para gastarle su <b>W</b>.</li>
+                                        <li>Nuestra <b>W</b> lo puede agarrar cuando él usa la suya</b>.</li>
+                                        <li>Es recomendable que <b>congelemos</b> la línea cerca de torre ya que es muy
+                                            fácil gankearlo.</li>
+                                        <li>Podemos rushear corta curas o daño ya que es muy <b>squishy</b>.</li>
                                     </ul>
                                 </article>
                             </details>
@@ -898,10 +905,10 @@
                                 </summary>
                                 <article class="matchups__tips">
                                     <ul>
-                                        <li>Guardar la E para el Parry</li>
-                                        <li>Pokear con la 1° Q</li>
-                                        <li>Rushear tabis y corta curas</li>
-                                        <li>Freezear en torre ya que es muy gankeable</li>
+                                        <li>Aprovechar cuando está sin la <b>pasiva</b> para hacerle daño.</li>
+                                        <li>Su <b>E</b> tiene 4 segundos más que nuestra <b>W</b>.</li>
+                                        <li>Tradear sin miedo sólo si pegamos la primera <b>Q</b>.</li>
+                                        <li>Su rango de <b>básico</b> es el alcance de nuestras <b>Q</b>.</li>
                                     </ul>
                                 </article>
                             </details>
@@ -1218,7 +1225,6 @@
             </div>
         </article>
 
-
         <!-- Sección Skins -->
         <section id="skins" data__scroll--spy>
             <article class="hero__image" style="--hero-image: url('assets/Akshan_wall.jpg'); --hero-attachment:scroll;">
@@ -1290,6 +1296,14 @@
                                         d="M20,3H4C3.447,3,3,3.448,3,4v16c0,0.552,0.447,1,1,1h16c0.553,0,1-0.448,1-1V4C21,3.448,20.553,3,20,3z M8.339,18.337H5.667	v-8.59h2.672V18.337z M7.003,8.574c-0.856,0-1.548-0.694-1.548-1.548s0.691-1.548,1.548-1.548c0.854,0,1.548,0.693,1.548,1.548	S7.857,8.574,7.003,8.574z M18.338,18.337h-2.669V14.16c0-0.996-0.018-2.277-1.388-2.277c-1.39,0-1.601,1.086-1.601,2.207v4.248	h-2.667v-8.59h2.56v1.174h0.037c0.355-0.675,1.227-1.387,2.524-1.387c2.704,0,3.203,1.778,3.203,4.092V18.337z" />
                                 </svg>
                             </a>
+                            <a href="https://las.op.gg/summoner/userName=Mirato" target="_blank" rel="noopener">
+                                <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24">
+                                    <path
+                                        d="M16.636 12.516c1.253 0 2.435.551 3.243 1.513l.12.142-.155.103-1.37.914-.115.077-.096-.099c-.433-.443-1.011-.65-1.627-.65-1.255 0-2.277.985-2.277 2.242 0 1.257 1.022 2.28 2.277 2.28 1.062 0 1.766-.6 1.904-1.27h-1.732v-1.519h3.779c.009.106.02.274.029.51.014.394-.007.636-.087 1.113-.321 1.93-1.813 3.128-3.893 3.128-2.336 0-4.237-1.903-4.237-4.242s1.9-4.242 4.237-4.242zm-8.898-.001c1.252 0 2.434.551 3.242 1.512l.12.143-.155.103-1.37.914-.115.077-.096-.099c-.433-.443-1.01-.65-1.626-.65-1.256 0-2.277.985-2.277 2.242 0 1.257 1.021 2.28 2.277 2.28 1.06 0 1.765-.6 1.903-1.27H7.909v-1.519h3.779c.009.106.02.274.029.51.014.394-.007.636-.087 1.113-.32 1.93-1.813 3.128-3.892 3.128-2.337 0-4.238-1.903-4.238-4.242s1.901-4.242 4.238-4.242zM7.742 3c2.338 0 4.24 1.905 4.24 4.246s-1.902 4.246-4.24 4.246c-2.34 0-4.242-1.905-4.242-4.246S5.403 3 7.742 3zm9.267.002c1.787 0 3.032 1.41 3.032 3.235 0 1.835-1.31 3.236-3.032 3.236h-2.315v2.012h-1.903V3.002zm3.032 6.761c.474 0 .86.386.86.861s-.386.86-.86.86-.86-.385-.86-.86.386-.86.86-.86zm-12.3-4.748c-1.228 0-2.228 1-2.228 2.23 0 1.231 1 2.232 2.229 2.232 1.228 0 2.228-1.001 2.228-2.231s-1-2.231-2.228-2.231zM17 4.965h-2.306V7.51H17c.795 0 1.038-.734 1.038-1.273 0-.523-.243-1.273-1.038-1.273z"
+                                        transform="translate(-919 -8) translate(919 8)" />
+                                </svg>
+                            </a>
                         </small>
                     </aside>
                 </article>
@@ -1337,6 +1351,7 @@
         <small>Hecho con <div class="heart"></div> por <a href="https://www.linkedin.com/in/lucasgim%C3%A9nez1054/"
                 target="_blank" rel="noopener">Lucas Giménez</a></small>
     </footer>
+
     <script src="script.js"></script>
 </body>
 
