Subí mi rango lp etc

--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
                     <h2>Mirato</h2>
                     <img src="assets/Position_Challenger-Top.png" alt="Top">
                 </div>
+                <div class="rank__data">
+                    <p class="win"></p>
+                    <p class="losses"></p>
+                    <p class="lp"></p>
+                </div>
             </article>
 
             <article>
