--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Title-->
-    <title>Landing Page</title>
+    <title>Lol Page - Mirato</title>
 
     <!--Font Family-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -1335,7 +1335,7 @@
                             <h3>
                                 ¡Muchas Gracias!
                                 <br>
-                                Por tu propuesta
+                                Por tu mensaje
                             </h3>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path d="M12,18c4,0,5-4,5-4H7C7,14,8,18,12,18z" />
