Cambio todo a helpers y componentes.

--- a/index.html
+++ b/index.html
@@ -1357,7 +1357,7 @@
                 target="_blank" rel="noopener">Lucas Giménez</a></small>
     </footer>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
