--- a/index.html
+++ b/index.html
@@ -198,24 +198,58 @@
                             <h4>The Darking Blade</h4>
                         </div>
                         <div class="champion__header--abilities">
-                            <div class="champion__skill--label">
-                                <img src="assets/Aatrox/Aatrox_Passive.png" alt="Aatrox Passive">
+                            <div class="champion__skill--label tooltip">
+                                <img src=" assets/Aatrox/Aatrox_Passive.png" alt="Aatrox Passive">
+                                <span class="tooltip__text">
+                                    <h4>Deathbringer Stance</h4>
+                                    <p>Periodically, Aatrox's next basic attack deals bonus <physicalDamage>physical
+                                            damage</physicalDamage> and heals him,
+                                        based on the target's max health.</p>
+                                </span>
                                 <div class="skill__label--key bottom-center">P</div>
                             </div>
-                            <div class="champion__skill--label">
+                            <div class="champion__skill--label tooltip">
                                 <img src="assets/Aatrox/AatroxQ.png" alt="Aatrox Q">
+                                <span class="tooltip__text">
+                                    <h4>The Darkin Blade</h4>
+                                    <small>14/12/10/8/6</small>
+                                    <p>Aatrox slams his greatsword down, dealing physical damage.
+                                        He can swing three times, each with a different area of
+                                        effect.</p>
+                                </span>
                                 <div class="skill__label--key bottom-center">Q</div>
                             </div>
-                            <div class="champion__skill--label">
+                            <div class="champion__skill--label tooltip">
                                 <img src="assets/Aatrox/AatroxW.png" alt="Aatrox W">
+                                <span class="tooltip__text">
+                                    <h4>Infernal Chains</h4>
+                                    <small>26/23/20/17/14</small>
+                                    <p>Aatrox smashes the ground, dealing damage to the first enemy
+                                        hit. Champions and large monsters have to leave the impact
+                                        area quickly or they will be dragged to the center and take the damage again.
+                                    </p>
+                                </span>
                                 <div class="skill__label--key bottom-center">W</div>
                             </div>
-                            <div class="champion__skill--label">
+                            <div class="champion__skill--label tooltip">
                                 <img src="assets/Aatrox/AatroxE.png" alt="Aatrox E">
+                                <span class="tooltip__text">
+                                    <h4>Umbral Dash</h4>
+                                    <small>9/8/7/6/5</small>
+                                    <p>Passively, Aatrox heals when damaging enemy champions. On
+                                        activation, he dashes in a direction.</p>
+                                </span>
                                 <div class="skill__label--key bottom-center">E</div>
                             </div>
-                            <div class="champion__skill--label">
+                            <div class="champion__skill--label tooltip">
                                 <img src="assets/Aatrox/AatroxR.png" alt="Aatrox R">
+                                <span class="tooltip__text">
+                                    <h4>World Ender</h4>
+                                    <small>120/100/80</small>
+                                    <p>Aatrox unleashes his demonic form, fearing nearby enemy
+                                        minions and gaining attack damage, increased healing, and
+                                        movement speed. If he gets a takedown, this effect is extended.</p>
+                                </span>
                                 <div class="skill__label--key bottom-center">R</div>
                             </div>
                         </div>
@@ -405,8 +439,30 @@
                                             Hechizos
                                         </div>
                                         <div class="spells__container">
-                                            <img src="assets/SummonerTeleport.png" alt="Teleport">
-                                            <img src="assets/SummonerFlash.png" alt="Flash">
+                                            <div class="tooltip">
+                                                <img src="assets/SummonerTeleport.png" alt="Teleport">
+                                                <span class="tooltip__text">
+                                                    <h4>Deathbringer Stance</h4>
+                                                    <p>Periodically, Aatrox's next basic attack deals bonus
+                                                        <physicalDamage>
+                                                            physical
+                                                            damage</physicalDamage> and heals him,
+                                                        based on the target's max health.
+                                                    </p>
+                                                </span>
+                                            </div>
+                                            <div class="tooltip">
+                                                <img src="assets/SummonerFlash.png" alt="Flash">
+                                                <span class="tooltip__text">
+                                                    <h4>Deathbringer Stance</h4>
+                                                    <p>Periodically, Aatrox's next basic attack deals bonus
+                                                        <physicalDamage>
+                                                            physical
+                                                            damage</physicalDamage> and heals him,
+                                                        based on the target's max health.
+                                                    </p>
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="champion__runes--build">
