Chau botoncito de CV

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                     <li><i>Season</i> 10 <b>Challenger</b></li>
                     <li><i>Season</i> 11 <b>Challenger</b></li>
                 </ul>
-                <div>
+                <!-- <div>
                     <a class="btn" href="assets/CV Gimenez Lucas - Programador.pdf" target="_blank"
                         rel="noopener">DESCARGA MI CV</a>
-                </div>
+                </div> -->
             </article>
 
             <article>
