--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="#runas" data__scroll--spy>Runas</a>
                 <a href="#counters" data__scroll--spy>Counters</a>
                 <a href="#skins" data__scroll--spy>Skins</a>
-                <a href="#contacto" data__scroll--spy>Contacto</a>
+                <!-- <a href="#contacto" data__scroll--spy>Contacto</a> -->
             </nav>
         </section>
     </header>
@@ -1286,7 +1286,7 @@
         </section>
 
         <!-- Contacto -->
-        <section id="contacto" class="contact section" data__scroll--spy>
+        <!-- <section id="contacto" class="contact section" data__scroll--spy>
             <div class="container">
                 <h2 class="section__title">¿Interesado?</h2>
                 <article class="contact__cards">
@@ -1383,13 +1383,15 @@
                     </div>
                 </article>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- FOOTER -->
     <footer class="footer">
-        <small>Hecho con <div class="heart"></div> por <a href="https://www.linkedin.com/in/lucasgim%C3%A9nez1054/"
-                target="_blank" rel="noopener">Lucas Giménez</a></small>
+        <small>Hecho con <div class="heart"></div> por
+            <a href="https://clips.twitch.tv/SmokyPoisedGooseDxAbomb-lZ99mx0sGMLWptYq?ab_channel=mantarraya"
+                target="_blank" rel="noopener">
+                Lucas Giménez</a></small>
     </footer>
 
     <script type="module" src="script.js"></script>
