--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- Sección Runas Maestrias ETC -->
         <section id="runas" class="section" data__scroll--spy>
             <div class="container full__screen--lg">
-                <h2 class="section__title">Runas y Maestrias Para TOP</h2>
+                <h2 class="section__title">Runas y Maestrias Para TOP <br> (No actualizado)</h2>
                 <article class="champion__info" style="background-image: radial-gradient( 600px 230px at 60% 35%, rgb(0 0 0 / 10%) 0%, rgb(7 7 32) 100% ), linear-gradient(
 90deg, rgb(11 11 28 / 61%) 0%, rgb(7 7 32 / 40%) 100%),
     url(assets/Aatrox_wall.jpg)">
@@ -1055,7 +1055,7 @@
         <!-- Sección de counter e información -->
         <section id="counters" class="section" data__scroll--spy>
             <div class="container full__screen--lg">
-                <h2 class="section__title">Counters y Estadísticas</h2>
+                <h2 class="section__title">Counters y Estadísticas <br> (No actualizado)</h2>
                 <article class="counters__container">
                     <div class="counters__header">
                         <div class="champ__data">
@@ -1142,16 +1142,12 @@
                             </details>
                             <details>
                                 <summary>
-                                    <img src="assets/Mordekaiser.png" alt="Mordekaiser">
-                                    <h3>Mordekaiser</h3>
+                                    <img src="assets/Tryndamere.png" alt="Tryndamere">
+                                    <h3>Tryndamere</h3>
                                 </summary>
                                 <article class="matchups__tips">
                                     <ul>
-                                        <li>Tu <b>Q</b> tiene más rango que la de él.</li>
-                                        <li>Pokear antes de hacer <b>all in</b> y estar pendiente del <b>CD</b> de su
-                                            escudo.</li>
-                                        <li>Abusar que es muy gankeable en nivel bajo.</li>
-                                        <li>Hacer <b>trades</b> cortos e ir pokeando con las Q.</li>
+                                        <li>Guardarse la <b>E</b> porque si se tira nos caga a piñas.</li>
                                     </ul>
                                 </article>
                             </details>
@@ -1208,16 +1204,17 @@
                             </details>
                             <details>
                                 <summary>
-                                    <img src="assets/Vladimir.png" alt="Vladimir">
-                                    <h3>Vladimir</h3>
+                                    <img src="assets/Mordekaiser.png" alt="Mordekaiser">
+                                    <h3>Mordekaiser</h3>
                                 </summary>
                                 <article class="matchups__tips">
                                     <ul>
-                                        <li>Tienen que hacer trades largos para gastarle su <b>W</b>.</li>
-                                        <li>Nuestra <b>W</b> lo puede agarrar cuando él usa la suya</b>.</li>
-                                        <li>Es recomendable que <b>congelemos</b> la línea cerca de torre ya que es muy
-                                            fácil gankearlo.</li>
-                                        <li>Podemos rushear corta curas o daño ya que es muy <b>squishy</b>.</li>
+                                        <li>Tu <b>Q</b> tiene más rango que la de él.</li>
+                                        <li>Pokear antes de hacer <b>all in</b> y estar pendiente del <b>CD</b> de su
+                                            escudo.</li>
+                                        <li>Abusar que es muy gankeable en nivel bajo.</li>
+                                        <li>Hacer <b>trades</b> cortos e ir pokeando con las Q.</li>
+                                        <li>Si es <b>Hachi</b> no necesitas consejos ya que es free lp.</li>
                                     </ul>
                                 </article>
                             </details>
